<resources>
    <string name="app_name">Jetpack</string>
    <string name="app_welcome">我是欢迎页</string>
    <string name="user_register">注册</string>
    <string name="user_login">登录</string>
    <string name="user_change">修改密码</string>
    <string name="user_info">个人信息</string>
    <string name="welcome_skip">跳过</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">I am home fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="activity_main_navigation_advert">广告</string>
    <string name="activity_main_navigation_init">初始化</string>
    <string name="activity_main_navigation_account">账户</string>
    <string name="activity_main_navigation_setting">设置</string>
    <string name="activity_main_navigation_pay">支付</string>


    <string name="fragment_main_advert">我是广告页</string>
    <string name="fragment_main_init">我是初始化</string>
    <string name="fragment_main_account">我是账号</string>
    <string name="fragment_main_pay">我是支付</string>
    <string name="fragment_main_setting">我是设置</string>
</resources>
